# shuJudge

./: .gitignore  CMakeLists.txt  readme.md
doc/: concise_intro.md
src/: CMakeLists.txt  Handler.cpp  Handler.h  Submission.cpp  Submission.h  Test.cpp  Test.h  config.h  main.cpp  util.cpp  util.h
